Release 0.13.0 - Exort now respects AuthMe and LoginSecurity unauthenticated-player restrictions for wireless terminals, monitors, and Exort GUI clicks, preventing storage access or monitor edits before login while keeping normal authenticated gameplay unchanged. - WorldEdit/FAWE selection wand clicks are now ignored by Exort block interactions and custom breaking, so selecting a monitor/storage/terminal/bus/wire block does not open Exort UI, show Exort peek data, or set a monitor item. - Fixed terminal and crafting-terminal category rendering when padded GUI slots are visible, preventing repeated sort/search clicks from logging task exceptions and interrupting terminal rendering.